# ethiclean

./: README.md  pyproject.toml  run_test.py  test_data.csv
.github/workflows/: publish.yml
src/ethiclean/: bias.py  cleaner.py  report.py
